[package]
name = "worded"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
rust-embed = { version = "6.3.0", features = ["debug-embed"] }
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3.56"
features = [
  "HtmlSelectElement"
]
